<resources>
    <string name="admob_publisher_interstitial_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_banner_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_name">Goal Organizer</string>
    <string name="app_version" translatable="false">1.0</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <string name="Goals_Activity">Current Goals</string>

    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_contact">Contact Us</string>
    <string name="action_rating">Rate us</string>

    <string name="Era_Dev" translatable="false">Era Dev</string>
    <string name="copyright_text" translatable="false">Copyright © 2019, Era\'Dev </string>
    <string name="rights">All rights reserved</string>
    <string name="current_goals">Current goals</string>
    <string name="missed_goals">Missed goals</string>
    <string name="achievements">Achievements</string>

    <string name="Night_Mood">Night Mode :</string>
    <string name="Notifications">Notifications :</string>
    <string name="Extras">Extras :</string>
    <string name="About_App">About App</string>
    <string name="Rate_Us">Rate Us</string>
    <string name="Done">DONE</string>
    <string name="Goal_Name">Goal Name</string>
    <string name="choose_anguage">Choose language</string>
    <string name="task_is_required">Task is required</string>
    <string name="goal_is_required">Goal is required</string>
    <string name="description_is_required">Description is required</string>
    <string name="date_is_required">Date is required</string>
    <string name="time_is_required">Time is required</string>
    <string name="Earlier_date">Error selecting date</string>
    <string name="Tasks">Task Name</string>
    <string name="The_Goal">Goal Name</string>
    <string name="Goal_Type">Goal Type</string>
    <string name="Description">Description</string>
    <string name="Job">Job</string>
    <string name="Housework">Housework</string>
    <string name="Education">Education</string>
    <string name="Social">Social</string>
    <string name="Other">Other</string>
    <string name="Delete">Delete</string>
    <string name="Save">Save</string>
    <string name="Date">Task Date</string>
    <string name="Notify_on">Task Time</string>
    <string name="Alarm">Task Alarm</string>
    <string name="Completed_State">Completed State</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>

    <string name="Quit">Are You Sure You Want To Quit?</string>
    <string name="Rate_app">Rate app</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>

    <string name="empty_state">No Goal Found</string>

    <string-array name="repeating_array">
        <item>Off</item>
        <item>Once</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string name="Exercise">Exercises</string>
    <string name="Display_Language">Language settings:</string>

</resources>
