<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor"
    android:gravity="center"
    tools:context=".AboutActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/splash" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textColor="?attr/textcolor"
        android:textSize="10pt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/appVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/app_version"
        android:textColor="?attr/textcolor"
        android:textSize="10pt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/copyright_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appVersion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/copyright_text"
        android:textColor="?attr/textcolor"
        android:textSize="8pt" />

    <TextView
        android:id="@+id/rights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/copyright_text"
        android:layout_centerHorizontal="true"
        android:text="@string/rights"
        android:textColor="?attr/textcolor"
        android:textSize="8pt" />

    <ImageView
        android:id="@+id/team_logo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_below="@id/rights"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/team_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/team_logo"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fb_logo"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginRight="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/fb_logo" />

        <ImageView
            android:id="@+id/twitter_logo"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginRight="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/twitter_logo" />

        <ImageView
            android:id="@+id/mail_logo"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:scaleType="centerCrop"
            android:src="@drawable/mail_logo" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adUnitId="@string/admob_banner_id"
        ads:adSize="BANNER"
        >
    </com.google.android.gms.ads.AdView>
</RelativeLayout>