<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:orientation="vertical"
    tools:context=".GoalActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/The_Goal"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/goal_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Goal_Type"
        android:textSize="15sp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/radiogroup">

            <RadioButton
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:id="@+id/job_radiobutton" />

            <RadioButton
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_marginTop="23dp"
                android:id="@+id/housework_radiobutton"/>

            <RadioButton
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_marginTop="22dp"
                android:id="@+id/education_radiobutton" />

            <RadioButton
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_marginTop="26dp"
                android:id="@+id/exercise_radiobutton" />

            <RadioButton
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_marginTop="27dp"
                android:id="@+id/socail_radiobutton" />

            <RadioButton
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_marginTop="28dp"
                android:id="@+id/other_radiobutton" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_toEndOf="@id/radiogroup"
            android:layout_toRightOf="@id/radiogroup"
            android:layout_marginTop="6dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/job"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/Job"
                android:gravity="center"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_toEndOf="@id/radiogroup"
            android:layout_toRightOf="@id/radiogroup"
            android:layout_below="@id/linear1"
            android:layout_marginTop="6dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/housework"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/Housework"
                android:gravity="center"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_toEndOf="@id/radiogroup"
            android:layout_toRightOf="@id/radiogroup"
            android:layout_below="@id/linear2"
            android:layout_marginTop="6dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/education"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/Education"
                android:gravity="center"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_toEndOf="@id/radiogroup"
            android:layout_toRightOf="@id/radiogroup"
            android:layout_below="@id/linear3"
            android:layout_marginTop="6dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/exercise"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/Exercise"
                android:gravity="center"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_toEndOf="@id/radiogroup"
            android:layout_toRightOf="@id/radiogroup"
            android:layout_below="@id/linear4"
            android:layout_marginTop="6dp">

            <ImageView
                android:layout_width="37dp"
                android:layout_height="39dp"
                android:layout_gravity="center"
                android:src="@drawable/social" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/Social"
                android:gravity="center"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_toEndOf="@id/radiogroup"
            android:layout_toRightOf="@id/radiogroup"
            android:layout_below="@id/linear5"
            android:layout_marginTop="6dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/other"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/Other"
                android:gravity="center"
                android:textSize="15sp" />
        </LinearLayout>

    </RelativeLayout>
    <!--
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"

                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="40dp"
                            android:layout_height="20dp"
                            android:checked="true" />


                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/job" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginLeft="5dp"
                            android:text="@string/Job"

                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">


                        <RadioButton
                            android:layout_width="40dp"
                            android:layout_height="20dp" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/housework" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginLeft="5dp"
                            android:text="@string/Housework"

                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">


                        <RadioButton
                            android:layout_width="40dp"
                            android:layout_height="20dp" />


                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/education" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginLeft="5dp"
                            android:text="@string/Education"

                            android:textSize="15sp" />
                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <RadioButton
                            android:id="@+id/radio1"
                            android:layout_width="40dp"
                            android:layout_height="20dp" />


                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/exercise" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginLeft="5dp"
                            android:text="@string/Education"

                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">


                        <RadioButton
                            android:layout_width="40dp"
                            android:layout_height="20dp" />


                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/social" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginLeft="10dp"
                            android:text="@string/Social"

                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">


                        <RadioButton
                            android:layout_width="40dp"
                            android:layout_height="20dp" />


                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/other" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginLeft="5dp"
                            android:text="@string/Other"
                            android:textSize="15sp"

                            />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
            /-->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/Description"
        android:textSize="15sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:id="@+id/goal_description"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/Delete"
            android:id="@+id/delete_goal"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/save_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Save"
            android:textAllCaps="false" />
    </LinearLayout>

    </LinearLayout>

